--- a/AjuNews/style.css
+++ b/AjuNews/style.css
@@ -462,11 +462,12 @@ body.dark-mode .change.negative {
 }
 
 .weather-details span {
-  padding: 0.4rem 0.6rem;
+  padding: 0.2rem 1.0rem;
   background-color: var(--cor-fundo);
   border-radius: 6px;
   text-align: center;
 }
+
 
 
 .noticia-destaque {
@@ -707,4 +708,30 @@ footer {
     align-items: flex-start;
     gap: 0.8rem;
   }
+}
+
+header, .page-container, footer {
+  transition: margin-left 0.3s ease-in-out;
+}
+
+body.sidebar-aberta .sidebar {
+  left: 0;
+}
+
+body.sidebar-aberta header,
+body.sidebar-aberta .page-container,
+body.sidebar-aberta footer {
+  margin-left: 250px;
+}
+
+body.sidebar-aberta .menu-btn span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+body.sidebar-aberta .menu-btn span:nth-child(2) {
+  opacity: 0;
+}
+
+body.sidebar-aberta .menu-btn span:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -7px);
 }
